change rh-trex,rh_trex to trex
also changed api/rh-trex to api/rhtrex
