# openapi/openapi.yaml
@@ -11,7 +11,7 @@ servers:
   - url: https://api.stage.openshift.com
     description: Staging server
 paths:
-  /api/rh-trex/v1/dinosaurs:
+  /api/rhtrex/v1/dinosaurs:
     get:
       summary: Returns a list of dinosaurs
       security:
@@ -95,7 +95,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /api/rh-trex/v1/dinosaurs/{id}:
+  /api/rhtrex/v1/dinosaurs/{id}:
     get:
       summary: Get an dinosaur by id
       security:
